--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -1,5 +1,6 @@
-<p id="notice"><%= notice %></p>
 
+
+<%= link_to 'New Book', new_book_path %>
 <h1>Listing Books</h1>
 
 <table>
@@ -9,6 +10,7 @@
       <th>Author</th>
       <th>Isbn</th>
       <th>Description</th>
+      <th>User ID creator</th>
       <th colspan="3"></th>
     </tr>
   </thead>
@@ -20,6 +22,8 @@
         <td><%= book.author %></td>
         <td><%= book.isbn %></td>
         <td><%= book.description %></td>
+        <td><%= book.user_id %></td>
+
         <td><%= link_to 'Show', book %></td>
         <td><%= link_to 'Edit', edit_book_path(book) %></td>
         <td><%= link_to 'Destroy', book, method: :delete, data: { confirm: 'Are you sure?' } %></td>
@@ -30,4 +34,10 @@
 
 <br>
 
-<%= link_to 'New Book', new_book_path %>
+<% @users.each do |user| %>
+  <p><%= link_to user.first_name, user_path(user) %></p>
+
+<% end %>
+
+
+
