--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,3 +1,8 @@
 
 
 <h2><%= @user.first_name %>'s  Profile</h2>
+<img src=<%= @user.picture_url %> alt="">
+
+<% @user_books.each do |book| %>
+  <p><%= link_to book.title, book_path(book) %></p>
+<% end %>
