--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -11,6 +11,7 @@
       <th>Isbn</th>
       <th>Description</th>
       <th>User ID creator</th>
+      <th>Image</th>
       <th colspan="3"></th>
     </tr>
   </thead>
@@ -23,6 +24,7 @@
         <td><%= book.isbn %></td>
         <td><%= book.description %></td>
         <td><%= book.user_id %></td>
+        <td><img src=<%= book.picture_url %> alt=""></td>
 
         <td><%= link_to 'Show', book %></td>
         <td><%= link_to 'Edit', edit_book_path(book) %></td>
