--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -20,5 +20,10 @@
   <%= @book.description %>
 </p>
 
+<p>
+  <strong>Image:</strong>
+  <img src=<%= @book.picture_url %> alt="">
+</p>
+
 <%= link_to 'Edit', edit_book_path(@book) %> |
 <%= link_to 'Back', books_path %>
