delete, view and edit books finished, added columns in schema for reviews

--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -27,3 +27,7 @@
 
 <%= link_to 'Edit', edit_book_path(@book) %> |
 <%= link_to 'Back', books_path %>
+
+<%= render './reviews/form' %>
+<h3>Latest reviews:</h3>
+<%= render @book.reviews %>
