--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -25,11 +25,21 @@
         <td><%= book.description %></td>
         <td><%= book.user_id %></td>
         <td><img src=<%= book.picture_url %> alt=""></td>
-          <td><%= link_to 'Show', book %></td>
-        <% if current_user.id == book.user_id %>
-          <td><%= link_to 'Edit', edit_book_path(book) %></td>
-          <td><%= link_to 'Destroy', book, method: :delete, data: { confirm: 'Are you sure?' } %></td>
-        <% end %>
+
+          <% if user_signed_in? == false %>
+            <td><%= link_to 'Show', book %></td>
+          <% end %>
+          <% if user_signed_in? %>
+            <% if current_user.id == book.user_id %>
+              <td><%= link_to 'Show', book %></td>
+              <td><%= link_to 'Edit', edit_book_path(book) %></td>
+              <td><%= link_to 'Destroy', book, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+            <% else %>
+              <td><%= link_to 'Show', book %></td>
+            <% end %>
+          <% end %>
+
+
       </tr>
     <% end %>
   </tbody>
