made root page to be sign in with devise

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -15,7 +15,7 @@
     <br>
   <% else %>
       <p>
-     <%= link_to "Books", books_path %> - | - <%= link_to "Sing In", new_user_session_path %>
+      <%= link_to "Sing In", new_user_session_path %>
     </p>
     <br>
   <% end %>
