--- a/app/views/books/_form.html.erb
+++ b/app/views/books/_form.html.erb
@@ -1,5 +1,5 @@
-<%= form_for(@book) do |f| %>
-  <% if @book.errors.any? %>
+<%=  simple_form_for @book, :html => { :multipart => true } do |f| %>
+ <% if @book.errors.any? %>
     <div id="error_explanation">
       <h2><%= pluralize(@book.errors.count, "error") %> prohibited this book from being saved:</h2>
 
@@ -11,23 +11,10 @@
     </div>
   <% end %>
 
-  <div class="field">
-    <%= f.label :title %><br>
-    <%= f.text_field :title %>
-  </div>
-  <div class="field">
-    <%= f.label :author %><br>
-    <%= f.text_field :author %>
-  </div>
-  <div class="field">
-    <%= f.label :isbn %><br>
-    <%= f.text_field :isbn %>
-  </div>
-  <div class="field">
-    <%= f.label :description %><br>
-    <%= f.text_area :description %>
-  </div>
-  <div class="actions">
-    <%= f.submit %>
-  </div>
+ <%= f.input :title, label: "Book title" %>
+ <%= f.input :author, label: "Book author" %>
+ <%= f.input :isbn, isbn: "Isbn" %>
+ <%= f.input :description, label: "Book description" %>
+ <%=  f.button :submit %>
 <% end %>
+
