--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,17 +8,54 @@
 </head>
 <body>
 
-  <% if user_signed_in? %>
-    <p>
-    Hello, <%= current_user.first_name %> - | - <%= link_to "Books", books_path %> - | - <a href="/users/<%= current_user.id %>">Profile</a> - | - <%= link_to "Edit Settings", edit_user_registration_path %> - | - <%= link_to "Sing Out", destroy_user_session_path,  :method  => 'delete'%>
-    </p>
-    <br>
-  <% else %>
-      <p>
-      <%= link_to "Sing In", new_user_session_path %>
-    </p>
-    <br>
-  <% end %>
+<% if user_signed_in? %>
+  <nav class="navbar navbar-default navbar-fixed-top">
+    <div class="container-fluid">
+      <!-- Brand and toggle get grouped for better mobile display -->
+      <div class="navbar-header">
+        <img src="/assets/logo.png" alt="">
+        
+      </div>
+
+      <!-- Collect the nav links, forms, and other content for toggling -->
+      <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+
+        <form class="navbar-form navbar-left" role="search">
+          <div class="form-group">
+            <input type="text" class="form-control" placeholder="Search">
+          </div>
+            <button type="submit" class="btn btn-default"><span class="glyphicon glyphicon-search"></span></button>
+        </form>
+
+        <ul class="nav navbar-nav navbar-right">
+          <li><a href="/users/<%= current_user.id %>"><%= current_user.first_name %></a></li>
+          <li><%= link_to "Books", books_path %></li>
+          <li class="dropdown">
+            <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false"><span class="caret"></span></a>
+            <ul class="dropdown-menu">
+              <li><%= link_to 'New Book', new_book_path %></li>
+              <li><%= link_to "Settings", edit_user_registration_path %></li>
+              <li><%= link_to "Sing Out", destroy_user_session_path,  :method  => 'delete'%></li>
+            </ul>
+          </li>
+        </ul>
+      </div><!-- /.navbar-collapse -->
+
+    </div><!-- /.container-fluid -->
+  </nav> 
+<% else %>
+  <nav class="navbar navbar-default navbar-fixed-top">
+    <div class="container-fluid">
+      <!-- Brand and toggle get grouped for better mobile display -->
+      <div class="navbar-header">
+        <a class="navbar-brand" href="#">Brand</a>
+      </div>
+      <!-- Collect the nav links, forms, and other content for toggling -->
+      <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+      </div><!-- /.navbar-collapse -->
+    </div><!-- /.container-fluid -->
+  </nav> 
+<% end %>
 
 <p class="notice"><%= notice %></p>
 <p class="alert"><%= alert %></p>
