--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,7 +13,7 @@
     <div class="container-fluid">
       <!-- Brand and toggle get grouped for better mobile display -->
       <div class="navbar-header">
-        <img src="/assets/logo.png" alt="">
+        <img src="/assets/logo8.png" alt="" height="28" width="28">
         
       </div>
 
@@ -22,18 +22,18 @@
 
         <form class="navbar-form navbar-left" role="search">
           <div class="form-group">
-            <input type="text" class="form-control" placeholder="Search">
+            <input type="text" class="form-control input-sm" placeholder="Search Books">
           </div>
-            <button type="submit" class="btn btn-default"><span class="glyphicon glyphicon-search"></span></button>
+            <button type="submit" class="btn btn-default btn-sm"><span class="glyphicon glyphicon-search"></span></button>
         </form>
 
         <ul class="nav navbar-nav navbar-right">
-          <li><a href="/users/<%= current_user.id %>"><%= current_user.first_name %></a></li>
-          <li><%= link_to "Books", books_path %></li>
+          <li><a href="/users/<%= current_user.id %>"><img src=<%= current_user.picture_url %> alt="" height="20" width="20"> <%= current_user.first_name %></a></li>
+          <li><a href="/books/"><span class="glyphicon glyphicon-globe"></span> Books</a></li>
+          <li><a href="/books/new"><span class="glyphicon glyphicon-book"></span> Post A Book</a></li>
           <li class="dropdown">
             <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false"><span class="caret"></span></a>
             <ul class="dropdown-menu">
-              <li><%= link_to 'New Book', new_book_path %></li>
               <li><%= link_to "Settings", edit_user_registration_path %></li>
               <li><%= link_to "Sing Out", destroy_user_session_path,  :method  => 'delete'%></li>
             </ul>
