--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,9 +12,8 @@
   <nav class="navbar navbar-default navbar-fixed-top">
     <div class="container-fluid">
       <!-- Brand and toggle get grouped for better mobile display -->
-      <div class="navbar-header">
+      <div class="navbar-header small-logo-navbar">
         <img src="/assets/logo8.png" alt="" height="28" width="28">
-        
       </div>
 
       <!-- Collect the nav links, forms, and other content for toggling -->
@@ -43,23 +42,30 @@
 
     </div><!-- /.container-fluid -->
   </nav> 
+<p class="notice"><%= notice %></p>
+<p class="alert"><%= alert %></p>
 <% else %>
-  <nav class="navbar navbar-default navbar-fixed-top">
+  <nav class="navbar navbar-default no-sing-in-navbar">
     <div class="container-fluid">
       <!-- Brand and toggle get grouped for better mobile display -->
-      <div class="navbar-header">
-        <a class="navbar-brand" href="#">Brand</a>
+
+      <div class="navbar-header long-logo-navbar">
+        <img src="/assets/longlogosavebook3.png" alt="" height="35" width="220">
       </div>
       <!-- Collect the nav links, forms, and other content for toggling -->
-      <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+      <div class="collapse navbar-collapse navbar-right form-sing-in" id="bs-example-navbar-collapse-1">
+
+        <%= render './devise/sessions/form' %>
       </div><!-- /.navbar-collapse -->
     </div><!-- /.container-fluid -->
   </nav> 
 <% end %>
 
-<p class="notice"><%= notice %></p>
-<p class="alert"><%= alert %></p>
 <%= yield %>
+
+<footer class="footer">
+  <p>facebook inspiration </p>
+</footer>
 
 </body>
 </html>
