--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,15 +1,71 @@
 
 
-<h2><%= @user.first_name %>'s  Profile</h2>
-<img src=<%= @user.picture_url %> alt="">
+<div class="container">
+  <div class="images-profile-container">
+    <img src="/assets/image_profile.jpg" alt="" height="410" width="100%">
+    <div class="profile-pic-container">
+      <p>
+        <img src=<%= @user.picture_url %> alt="" height="220" width="210">
+        <div class="profile-name">
+          <h2><%= @user.first_name %> <%= @user.last_name %></h2>
+        </div>
+      </p>
+    </div>
+  </div>
 
-<% @user_books.each do |book| %>
-  <p>
-    <%= link_to book.title, book_path(book) %> --|--
-    <%= link_to 'Show', book %>
-    <% if current_user.id == book.user_id %>
-      <%= link_to 'Edit', edit_book_path(book) %>
-      <%= link_to 'Destroy', book, method: :delete, data: { confirm: 'Are you sure?' } %>
-    <% end %>
-  </p>
-<% end %>
+  <div class="col-lg-12 information-profile-container">
+
+    <div class="col-lg-3 user-info-and-updates small-containers">
+      <h4>Basic Info</h4>
+      <p>About:<%= @user.about%></p>
+      <p>something</p>
+      <h4>Latest Books Actions</h4>
+      <p>book 1 </p>
+      <p>book 2 </p>
+      <p>book 3 </p>
+
+    </div>
+    
+
+    <div class="col-lg-8 user-books small-containers">
+  
+    
+
+    <div class="media">
+        <% @user_books.each do |book| %>
+
+          <div class="small-containers">
+
+            <div class="media-left media-top">
+              <a href="#">
+              <img src=<%= book.picture_url%> alt="" height="40" width="40">
+              </a>
+            </div>
+            <div class="media-body">
+              <h3><%= book.title %></h3>
+              <h4>by: <%= book.author %></h4>
+              <p><%= book.description %></p>
+                <% if user_signed_in? == false %>
+                  <button><%= link_to 'Show', book %></button> 
+                <% end %>
+            </div>
+              <% if user_signed_in? %>
+                <% if current_user.id == book.user_id %>
+                  <button>  <%= link_to 'Show', book %></button>
+                  <%= link_to 'Edit', edit_book_path(book) %>
+                  <%= link_to 'Destroy', book, method: :delete, data: { confirm: 'Are you sure?' } %>
+                <% else %>
+                  <button class="btn facebook-style-button"><%= link_to 'Show', book %></button> 
+                <% end %>
+              <% end %>
+
+        
+          </div>
+        <br>
+        <% end %>
+      </div>
+
+    </div>
+
+  </div>
+</div>
