--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,7 +13,7 @@
     <div class="container-fluid">
       <!-- Brand and toggle get grouped for better mobile display -->
       <div class="navbar-header small-logo-navbar">
-        <img src="/assets/logo8.png" alt="" height="28" width="28">
+        <a href="/books"><img src="/assets/logo8.png" alt="" height="28" width="28"></a>
       </div>
 
       <!-- Collect the nav links, forms, and other content for toggling -->
