--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -1,33 +1,37 @@
 <p id="notice"><%= notice %></p>
 
-<p>
-  <strong>Title:</strong>
-  <%= @book.title %>
-</p>
+<div class="container">
+  <div class="col-lg-12">
+    <h4><img src=<%= @users.find(@book.user_id).picture_url %> alt="" height="50" width="45">
+    This Book belongs to <%= @users.find(@book.user_id).first_name %> <%= @users.find(@book.user_id).last_name %></h4>
+    <div class="col-lg-4">
+       <p>        
+        <img src=<%= @book.picture_url %> alt="" height="499" width="329">
+      </p>
+    </div>
+    <div class="col-lg-8">
+      
+      <h1>Title: <%= @book.title %></h1>
+      <h3>Author: <%= @book.author %></h3>
+       <h4>Isbn: <%= @book.isbn %></h4> 
+      <p>
+        <strong>Description:</strong>
+        <%= @book.description %>
+      </p>
 
-<p>
-  <strong>Author:</strong>
-  <%= @book.author %>
-</p>
+     
+      <% if current_user.id == @book.user_id %>
+        <%= link_to 'Edit', edit_book_path(@book) %> |
+        <%= link_to 'Back', books_path %>
+      <% else %>
+        <button>Borrow book</button>
+      <% end %>
 
-<p>
-  <strong>Isbn:</strong>
-  <%= @book.isbn %>
-</p>
+      <%= render './reviews/form' %>
+      <h3>Latest reviews:</h3>
+      <%= render @book.reviews %>
+    </div>
 
-<p>
-  <strong>Description:</strong>
-  <%= @book.description %>
-</p>
-
-<p>
-  <strong>Image:</strong>
-  <img src=<%= @book.picture_url %> alt="">
-</p>
-
-<%= link_to 'Edit', edit_book_path(@book) %> |
-<%= link_to 'Back', books_path %>
-
-<%= render './reviews/form' %>
-<h3>Latest reviews:</h3>
-<%= render @book.reviews %>
+  </div>
+  
+</div>
