--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -195,4 +195,7 @@ input[type="button"], input[type="reset"], input[type="submit"] {
   margin: 4px;
 }
 
+.information-profile-container a {
+  color: #3b5998;
+}
 
