no angular js used, call jquery library instead

--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -70,7 +70,8 @@
       <br>
       <div class="small-containers">
         <h5>E-COMMERCE</h5>  
-        <a href="https://www.soloshoppers.com/"><p><img src="/assets/soloshoppers.png" alt="" height="20"></p></a>
+        <a href="http://www.soloshoppers.ca/"><p><img src="/assets/soloshoppers.png" alt
+        ="" height="20"></p></a>
         <p>Promote products and get commission. Make money Online!</p>
       </div>
       <br>
