--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -2,22 +2,26 @@
 
 <div class="container">
   <div class="col-lg-12">
-    <h4><img src=<%= @users.find(@book.user_id).picture_url %> alt="" height="50" width="45">
-    This Book belongs to <%= @users.find(@book.user_id).first_name %> <%= @users.find(@book.user_id).last_name %></h4>
-    <div class="col-lg-4">
-       <p>        
-        <img src=<%= @book.picture_url %> alt="" height="499" width="329">
-      </p>
-    </div>
-    <div class="col-lg-8">
-      
+    <h4><img src=<%= @users.find(@book.user_id).picture_url %> alt="" height="50" width="45">This Book belongs to <a href="/users/<%= @users.find(@book.user_id).id %>" style="color: #3b5998;"><b><%= @users.find(@book.user_id).first_name %> <%= @users.find(@book.user_id).last_name %></b></a></h4>
+    <div class="col-lg-4 small-containers">
       <h1>Title: <%= @book.title %></h1>
       <h3>Author: <%= @book.author %></h3>
-       <h4>Isbn: <%= @book.isbn %></h4> 
-      <p>
-        <strong>Description:</strong>
-        <%= @book.description %>
-      </p>
+      <h4>Isbn: <%= @book.isbn %></h4> 
+      <div class="small-containers">
+         <p>        
+          <img src=<%= @book.picture_url %> alt="" height="499" width="329">
+        </p>
+      </div>
+    </div>
+    <div class="col-lg-8 small-containers">
+
+      <p><strong>Description:</strong>
+        <%= @book.description %></p>
+      <div class="small-containers">
+        <h3>Book Location:</h3>
+        <iframe id = "map" style="height: 300px; width: 500px" src="https://www.google.com/maps/embed/v1/directions?key=AIzaSyCVt89sOKkehU7JDQpPncShX80rzGE6kj4&origin=<%= current_user.address %>&destination= <%= @book.user.address %> &avoid=tolls|highways"></iframe>
+      </div>
+      
 
        
       <% if current_user.id == @book.user_id %>
@@ -25,14 +29,16 @@
         <%= link_to 'Back', books_path %>
       <% end %>
       
-      <iframe id = "map" style="height: 400px; width: 600px" src="https://www.google.com/maps/embed/v1/directions?key=AIzaSyCVt89sOKkehU7JDQpPncShX80rzGE6kj4&origin=<%= current_user.address %>&destination= <%= @book.user.address %> &avoid=tolls|highways"></iframe>
-      
     
-      <%= render './requests/form' %>      
-
-      <%= render './reviews/form' %>
-      <h3>Latest reviews:</h3>
-      <%= render @book.reviews %>
+      <div class="reviews-container small-containers">
+        <h3>Interested? Make a Request!</h3>
+        <%= render './requests/form' %>
+        <br>
+        <h3>Have read the book? Let people know your opinion.</h3>
+        <%= render './reviews/form' %>
+        <h3>Latest reviews:</h3>
+        <%= render @book.reviews %>
+      </div>  
 
     </div>
 
