--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -32,7 +32,7 @@ body a:hover {
 }
 
 .navbar {
-  background: #44609D;
+  background-image: linear-gradient(#4E69A2, #3B5998);
   border-color: #44609D;
 }
 
@@ -230,4 +230,35 @@ input[type="button"], input[type="reset"], input[type="submit"] {
     border-color: #627AAC;
 }
 
+.title-basic-info-profile {
+  background: #F6F7F8; 
+}
+.list-group-item:first-child {
+    border-top-right-radius: 2px;
+    border-top-left-radius: 2px;
+}
 
+.modal-content {
+  width: 160%;
+  margin-left: -185px;
+  background: black;
+  border-radius: 0px;
+}
+
+.modal-body {
+    position: relative;
+    padding: 15px;
+    height: 550px;
+}
+.modal-display-info {
+  height: 535px;
+  width: 370px;
+}
+
+.modal-body {
+  margin-top: -15px;
+}
+
+.picture-profile-modal img {
+  margin-left: -15px;
+}
